# ProjectGen

./: CMakeLists.txt  README.md
cmake/: .flags.cmake.swp  build.cmake  flags.cmake
common/utility/: CMakeLists.txt
common/utility/inc/: CommandLineArgs.h  ConsoleUtils.h  DynamicLibraryLoader.hpp  Exception.hpp  InterProcessKeyValueStoreUtils.hpp  StringUtils.h  SystemUtils.h  SystemUtils.hpp
common/utility/src/: ColorUtils.cpp  CommandLineArgs.cpp  ConsoleUtils.cpp  FileUtils.cpp  State.cpp  StringUtils.cpp  SystemUtils.cpp  XMLUtils.cpp
common/utility/tests/: CMakeLists.txt
common/utility/tests/src/: test_FileUtils.cpp  test_StringUtils.cpp  test_XMLUtils.cpp
inc/: ColorUtils.h  ConcurrentQueue.hpp  DateTimeUtils.hpp  Exception.hpp  FileUtils.h  FileUtils.hpp  InterProcessKeyValueStoreUtils.hpp  ObjectList.hpp  ObjectMap.hpp  ParseUtils.hpp  Random.h  RangeBasedIterator.hpp  STLUtils.hpp  State.h  StringUtils.h  StringUtils.hpp  SystemUtils.h  SystemUtils.hpp  UtilityCommon.hpp  XMLNameMap.h  XMLUtils.h
products/pgen/pgen/: CMakeLists.txt
products/pgen/pgen/src/: main.cpp
products/pgen/pgen_qt/: CMakeLists.txt
products/pgen/pgen_qt/inc/: UIProjectCreatorMain.h
products/pgen/pgen_qt/src/: UIProjectCreatorMain.cpp  UIProjectCreatorMain.ui  main.cpp
products/pgen/pgen_utils/: CMakeLists.txt
products/pgen/pgen_utils/.pgen_templates/: base.cmake  build.cmake  c++_application.cmake  c++_library.cmake  flags.cmake  qt_application.cmake  qt_library.cmake
products/pgen/pgen_utils/inc/: ProjectGen.h
products/pgen/pgen_utils/share/pgen/: base.cmake  build_config.cmake  c++_application.cmake  c++_library.cmake  c++_shared_library.msvc  c++_static_library.msvc  config.cmake  qt_application.cmake  vs_application.msvc  vs_solution.msvc
products/pgen/pgen_utils/src/: ProjectGen.cpp  ProjectGen.cpp.autosave
products/pgen/pgen_utils/templates/: qt_application.cmake  qt_library.cmake
src/: ColorUtils.cpp  CommandLineArgs.cpp  Random.cpp  State.cpp  StringUtils.cpp  XMLUtils.cpp
tests/: CMakeLists.txt
tests/src/: test_FileUtils.cpp  test_StringUtils.cpp  test_Utility.cpp  test_XMLUtils.cpp
